# why3-elpi

./: .gitattributes  .gitignore  Makefile  README.md  dune-project  transform.elpi  w3lp.elpi  why3_elpi.opam  why3_elpi.opam.template  why3extra.conf
.github/workflows/: main.yml
examples/: tc.elpi
lib/: dune  why3_elpi.ml  why3_elpi.mli
lib/why3_elpi/: dune
lib/why3_elpi/generator/: dune
lib/why3_elpi/manual/: decl.ml  header.ml  task.ml  theory.ml  ty.ml
lib/why3_elpi/why3_types/: decl.ml  env.ml  ident.ml  term.ml  ty.ml
tests/: mini.mlw  simple.mlw  tc.mlw
